More small changes to the tableobj API to fix broken inode column type.
darcs-hash:20070501112107-f1522-5776418cbbaaf8c419a53a27ff0e46fa979dabb3.gz

--- a/images/pyflag.css
+++ b/images/pyflag.css
@@ -302,7 +302,7 @@ iframe#right {
 
 /** Matches are highlighted here */
 .match { 
-  background-color: yellow;
+  background-color: #f4ffa9;
 }
 
 /** Slack is highlighted here */
